refactor to remove extra 'attributes' field
Signed-off-by: Max Cao <macao@redhat.com>